[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/puzzles/rope_horizontal.png" type="Texture" id=1]
[ext_resource path="res://puzzles/RopePuzzle/BurningRope.gd" type="Script" id=2]
[ext_resource path="res://assets/puzzles/fogo/fogo 2.png" type="Texture" id=3]
[ext_resource path="res://assets/puzzles/fogo/fogo 3.png" type="Texture" id=4]
[ext_resource path="res://assets/puzzles/fogo/fogo 4.png" type="Texture" id=5]
[ext_resource path="res://assets/puzzles/fogo/fogo 5.png" type="Texture" id=6]
[ext_resource path="res://assets/puzzles/fogo/fogo 6.png" type="Texture" id=7]
[ext_resource path="res://assets/puzzles/fogo/fogo 7.png" type="Texture" id=8]
[ext_resource path="res://assets/puzzles/fogo/fogo 8.png" type="Texture" id=9]
[ext_resource path="res://assets/puzzles/fogo/fogo 9.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "burn",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="CircleShape2D" id=3]
radius = 1.0

[node name="Line2D" type="Line2D"]
z_index = 1
points = PoolVector2Array( 0, 0, 0, 20 )
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 1 )
texture_mode = 1
script = ExtResource( 2 )

[node name="TopFire" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
z_index = 1
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Tween" type="Tween" parent="TopFire"]

[node name="Button" type="TouchScreenButton" parent="TopFire"]
shape = SubResource( 2 )
passby_press = true

[node name="BlackEffect" type="ColorRect" parent="TopFire"]
show_behind_parent = true
margin_left = -20.0
margin_top = -486.0
margin_right = 20.0
margin_bottom = 6.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="Area2D" type="Area2D" parent="TopFire"]
position = Vector2( 0, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopFire/Area2D"]
shape = SubResource( 3 )

[node name="BottomFire" type="AnimatedSprite" parent="."]
position = Vector2( 0, 20 )
scale = Vector2( 0.1, 0.1 )
z_index = 1
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Tween" type="Tween" parent="BottomFire"]

[node name="Button" type="TouchScreenButton" parent="BottomFire"]
shape = SubResource( 2 )

[node name="BlackEffect" type="ColorRect" parent="BottomFire"]
modulate = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
show_behind_parent = true
margin_left = -20.0
margin_top = 5.0
margin_right = 20.0
margin_bottom = 650.0

[node name="Area2D" type="Area2D" parent="BottomFire"]
position = Vector2( 0, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomFire/Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="TopFire/Button" to="." method="_on_TopFire_Button_pressed"]
[connection signal="area_entered" from="TopFire/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="pressed" from="BottomFire/Button" to="." method="_on_BottomFire_Button_pressed"]
